--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Clean Blog
+title: "Yunlong's Blog"
 header-img: img/home-bg.jpg
 email: your-email@yourdomain.com
 description: "Write your site description here. It will be used as your sites meta description as well!"
 baseurl: ""
 url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  IronSummitMedia
+#twitter_username: SBootstrap
+github_username:  sylcrq
+#facebook_username:  IronSummitMedia
 
 # Build settings
 markdown: kramdown
